# candle

candle-core/: Cargo.toml
candle-core/src/: device.rs  dtype.rs  dummy_cuda_backend.rs  dummy_metal_backend.rs  shape.rs  tensor.rs
candle-onnx/: Cargo.toml  build.rs  build_config.yml
candle-onnx/src/: eval.rs  lib.rs
