[package]
name = "candle-onnx"
version = "0.8.1"
edition = "2021"

description = "ONNX support for Candle"
repository = "https://github.com/huggingface/candle"
keywords = ["blas", "tensor", "machine-learning"]
categories = ["science"]
license = "MIT OR Apache-2.0"

[dependencies]
candle = { path = "../candle-core", package = "candle-core", version = "0.8.1" }
candle-nn = { path = "../candle-nn", version = "0.8.1" }
prost = "0.12.1"
serde = { version = "1.0.171", features = ["derive"] }

[build-dependencies]
prost-build-config = "0.6"
serde_yaml = "0.9.34"

[dev-dependencies]
anyhow = { version = "1", features = ["backtrace"] }
clap = { version = "4.2.4", features = ["derive"] }
